[gd_scene load_steps=13 format=2]

[ext_resource path="res://sprites/enemies/bat/bat3.png" type="Texture" id=1]
[ext_resource path="res://scripts/enemies/enemy_bat.gd" type="Script" id=2]
[ext_resource path="res://sprites/enemies/bat/bat1.png" type="Texture" id=3]
[ext_resource path="res://sprites/enemies/bat/bat2.png" type="Texture" id=4]
[ext_resource path="res://audio/poof.ogg" type="AudioStream" id=6]
[ext_resource path="res://sprites/enemies/bat/bat_angry3.png" type="Texture" id=7]
[ext_resource path="res://sprites/enemies/bat/bat_angry2.png" type="Texture" id=8]
[ext_resource path="res://sprites/enemies/bat/bat_angry1.png" type="Texture" id=9]

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ ExtResource( 9 ), ExtResource( 8 ), ExtResource( 7 ), ExtResource( 8 ) ],
"loop": true,
"name": "steal",
"speed": 10.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 4 ), ExtResource( 1 ), ExtResource( 4 ) ],
"loop": true,
"name": "fly",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 16, 16 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 24, 24 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 18, 18 )

[node name="EnemyBat" type="KinematicBody2D"]
collision_mask = 0
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="AnimatedSprite" parent="."]
frames = SubResource( 5 )
animation = "fly"
frame = 1
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="AreaSteal" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaSteal"]
shape = SubResource( 3 )

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 64
collision_mask = 64

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource( 4 )

[node name="SoundDie" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -12.0

[node name="TimerSteal" type="Timer" parent="."]
one_shot = true

[node name="TimerDie" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="area_entered" from="AreaSteal" to="." method="_on_AreaSteal_area_entered"]
[connection signal="area_entered" from="Hitbox" to="." method="_on_Hitbox_area_entered"]
[connection signal="body_entered" from="Hitbox" to="." method="_on_Hitbox_body_entered"]
[connection signal="timeout" from="TimerSteal" to="." method="_on_TimerSteal_timeout"]
[connection signal="timeout" from="TimerDie" to="." method="_on_TimerDie_timeout"]
